[tool.poetry]
name = "dsa-algo-python"
version = "0.1.0"
description = "A all in one repo for learning dsa, alogorithm and language specific learning in one place"
authors = ["jiaulislam <jiaulislam.ict.bd@gmail.com>"]
readme = "README.md"
packages = [{include = "dsa_algo_python"}]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.0.275"
pre-commit = "^3.3.3"
devtools = "^0.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "./epay/tests"
]

[tool.isort]
known-third-party = ["fastapi", "python-dateutil", "python-dotenv", "oracledb", "num2words", "httpx", "pytz", "bcrypt"]
